force-app/main/default/objects/Plan_Item__c/Plan_Item__c.object-meta.xml
<CustomObject>
    <label>Plan Item</label>
    <nameField>
        <displayFormat>PItem-{0000}</displayFormat>
        <label>Plan Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>