force-app/main/default/objects/Plan_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>