force-app/main/default/objects/Plan_Item__c/fields/Earliest_Start__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start__c</fullName>
    <label>Earliest Start</label>
    <type>DateTime</type>
</CustomField>