force-app/main/default/objects/Plan_Item__c/fields/Latest_End__c.field-meta.xml
<CustomField>
    <fullName>Latest_End__c</fullName>
    <label>Latest End</label>
    <type>DateTime</type>
</CustomField>