force-app/main/default/objects/Plan_Item__c/fields/Plan_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Template Item</label>
    <referenceTo>Plan_Template_Item__c</referenceTo>
    <relationshipLabel>Plan Items</relationshipLabel>
    <relationshipName>Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>