force-app/main/default/objects/Plan_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Plan_Template_Item__c</columns>
    <columns>Earliest_Start__c</columns>
    <columns>Latest_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>